syntax = "proto3";

package com.webank.eggroll.rollframe;

// TODO: generalize message define

message Task {
    string task_id = 1;
    repeated Functor functors = 2;
    repeated Partition operands = 3;
    Job job = 4;
    string task_type = 5;
    repeated Partition results = 6;
}

message TaskResult {
    string task_id = 1;
}

message Functor {
    string name = 1;
    bytes body = 2;
}

message Partition {
    Store store = 1;
    string id = 2;
    int32 batch_size = 3;
}

message Store {
    string type = 1;
    string namespace = 2;
    string name = 3;
    string path = 4;
    int32 partition_size = 5;
}

message Job {
    string job_id = 1;
    int32 task_size = 2;
    repeated Store outputs = 3;
}


message BatchID {
    bytes id = 1;
    int32 size = 2;
}

message Batch {
    BatchID id = 1;
    bytes data = 2;
}

// TODO: use transfer lib
service TransferService {
    rpc write (stream Batch) returns (BatchID);
    rpc read (BatchID) returns (stream Batch);
}

message CommandResponse {
    CommandRequest request = 1;
    bytes data = 2;
    int32 size = 3;
}

message CommandRequest {
    string uri = 1;
    bytes data = 2;
    int32 size = 3;
}

service CommandService {
    rpc call (CommandRequest) returns (CommandResponse);
}